fix text alignment

--- a/login.css
+++ b/login.css
@@ -15,22 +15,5 @@ body{
         clear: both;
     }
 
-    .hl{
-        display: flex;
-        align-items: center;
-        text-align: center;
-        transform: translate(-50%);
-        border: 2px solid #ddd;
-        width: 175px;
-    }
 
-    .hl-innertext {
-        position: absolute;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        background-color: #f1f1f1;
-        border: 1px solid #ccc;
-        border-radius: 50%;
-        padding: 8px 10px;
-    }
 }
